# bloggy

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  handler.rs  router.rs  state.rs  template.rs
static/: 404.html  404.md  article_base.hbs  index.html  index_base.hbs
static/css/: style.css
static/js/: main.js
tests/: test.md
