[package]
name = "myblog"
version = "0.1.0"
edition = "2021"
default-run = "blog_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blog_service"

[dependencies]
hotwatch = "0.4.6"
walkdir = "2"
pulldown-cmark = { version = "0.9.1", default-features = false }
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = { version = "1.0.123", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.38", features = ["vendored"] }
lazy_static = "1.4.0"
